--- a/DS_Questions/Questions/vectors_arrays/Find_Search_Count/Find/Sorted/Search_in_Rotated_Sorted_Array_II.adoc
+++ b/DS_Questions/Questions/vectors_arrays/Find_Search_Count/Find/Sorted/Search_in_Rotated_Sorted_Array_II.adoc
@@ -1,11 +1,24 @@
+:imagesdir: images
+:couchbase_version: current
+:toc:
+:project_id: Search in Rotated Sorted Array II
+:icons: font
+:source-highlighter: prettify
+:tags: guides,meta
+
 == Search in Rotated Sorted Array II
+
 There is an integer array nums sorted in non-decreasing order (not necessarily with distinct values).
 Before being passed to your function, nums is rotated at an unknown pivot index k (0 <= k < nums.length) such that the resulting array is [nums[k], nums[k+1], ..., nums[n-1], nums[0], nums[1], ..., nums[k-1]] (0-indexed). For example, [0,1,2,4,4,4,5,6,6,7] might be rotated at pivot index 5 and become [4,5,6,6,7,0,1,2,4,4]
 
 === Approach-1. Binary Search
+
 ==== Logic
+
 ==== Code
+
 ===== CPP
+
 ```cpp
 class Solution {
 public:
